--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		]
 	},
 	"dependencies": {
+		"motion": "^11.11.17",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.3.1",
